--- a/jdk-1.6-parent/mbeanview-parent/mbeanview-examples/src/main/resources/org/wicketstuff/mbeanview/examples/HomePage.html
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview-examples/src/main/resources/org/wicketstuff/mbeanview/examples/HomePage.html
@@ -14,12 +14,12 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.3-strict.dtd" >
-    <head>  
-        <title>MBeanView Example</title>
-    </head>
-    <body>
-        <span wicket:id="example">message will be here</span>
-    </body>
+<html xmlns:wicket="http://wicket.apache.org/">
+	<head>
+		<title>MBeanView Example</title>
+	</head>
+	<body>
+		<span wicket:id="example">message will be here</span>
+	</body>
 </html>
 
