Custom tree icons.

--- a/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/MBeansPanel.html
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/MBeansPanel.html
@@ -16,15 +16,9 @@
 -->
 <html xmlns:wicket>
 	<wicket:panel>
-		<table>
-			<tr>
-				<td style="vertical-align: top;">
-					<div wicket:id="mBeansTree" style="width: 400px;"></div>
-				</td>
-				<td style="vertical-align: top;">
-					<div wicket:id="view"></div>
-				</td>
-			</tr>
-		</table>
+		<div class="mbeanview">
+			<div wicket:id="tree" class="tree"></div>
+			<div wicket:id="view" class="view"></div>
+		</div>
 	</wicket:panel>
 </html>
