Better output of attribute values.

--- a/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/panels/ResultPanel.html
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/panels/ResultPanel.html
@@ -2,10 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 	<body>
 		<wicket:panel>
+			<div wicket:id="detail"></div>
 			<div wicket:id="result-placeholder" class="result-output"></div>
 
 			<wicket:fragment wicket:id="result-text">
-				<div wicket:id="result"></div>
+				<span wicket:id="result"></span>
 			</wicket:fragment>
 		</wicket:panel>
 	</body>
