--- a/jdk-1.6-parent/mbeanview-parent/mbeanview-examples/src/main/resources/org/wicketstuff/mbeanview/examples/HomePage.html
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview-examples/src/main/resources/org/wicketstuff/mbeanview/examples/HomePage.html
@@ -14,12 +14,14 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
+<!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org/">
 	<head>
 		<title>MBeanView Example</title>
+		<!--		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />
+				<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" />-->
 	</head>
 	<body>
 		<span wicket:id="example">message will be here</span>
 	</body>
 </html>
-
