--- a/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/MBeansPanel.html
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/MBeansPanel.html
@@ -16,9 +16,11 @@
 -->
 <html xmlns:wicket>
 	<wicket:panel>
-		<div class="mbeanview">
-			<div wicket:id="tree" class="tree"></div>
-			<div wicket:id="view" class="view"></div>
+		<div class="mbeanspanel container">
+			<div class="row">
+				<div wicket:id="tree" class="tree span3"></div>
+				<div wicket:id="view" class="span8"></div>
+			</div>
 		</div>
 	</wicket:panel>
 </html>
