--- a/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/panels/AttributesPanel.html
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/panels/AttributesPanel.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 	<body>
 		<wicket:panel>
-			<table class="attributes">
+			<table class="attributes table table-striped table-condensed">
 				<tr wicket:id="attribute">
 					<td wicket:id="name">[name]</td>
 					<td><wicket:container wicket:id="value">[value]</wicket:container></td>
