--- a/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/panels/ResultPanel.html
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/panels/ResultPanel.html
@@ -8,6 +8,14 @@
 			<wicket:fragment wicket:id="result-text">
 				<span wicket:id="result"></span>
 			</wicket:fragment>
+			<wicket:fragment wicket:id="result-box">
+				<form wicket:id="form" class="form-inline">
+					<div class="input-append">
+						<input wicket:id="result" type="text" />
+						<button wicket:id="save" class="btn">[save]</button>
+					</div>
+				</form>
+			</wicket:fragment>
 		</wicket:panel>
 	</body>
 </html>
