Display details of outlined attributes.

--- a/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/panels/ResultPanel.html
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/panels/ResultPanel.html
@@ -16,6 +16,11 @@
 					</div>
 				</form>
 			</wicket:fragment>
+			<wicket:fragment wicket:id="result-list">
+				<ol>
+					<li wicket:id="list"><wicket:container wicket:id="result">[result]</wicket:container></li>
+				</ol>
+			</wicket:fragment>
 		</wicket:panel>
 	</body>
 </html>
